fix(network): align icon as requested

--- a/src/ui/views/Network/style.less
+++ b/src/ui/views/Network/style.less
@@ -39,6 +39,7 @@
 
   .category-tag {
     padding: 16px 24px;
+    padding-right: 14px;
   }
 }
 
